Correct redundant gap in photography's nav bar

--- a/css/photography.css
+++ b/css/photography.css
@@ -1,3 +1,6 @@
+body {
+  padding-left: 0;
+}
 
 /* ------ Header / Navigation ----------------------------------------------- */
 .site-header {
